# xmonad

./: .gitignore  .gitmodules  LICENSE  Readme.org  build  cabal.project  config.hs  gnome-xmonad.desktop  gnome-xmonad.target.d  kb-xmonad-config.cabal  stack.yaml  start-xmonad  startup-hook  xmobarrc  xmonad-tutorial.hs  xmonad-wip.hs  xmonad.hs
config/polybar/: config.ini
scripts/: RingCentral  biuro.sh  dom.sh  laptop.sh  layout_switch.sh  teams-bmw  teams-cognizant
